[Fix #8] Fix collapse/expand dynamics of sections

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -109,16 +109,12 @@
     display: inline-block;
     text-align: center;
     pointer-events: none;
-    margin-left: 30px;
+    margin-left: 6px;
     color: #535353;
 }
 
 .text-white .section-identifier {
     color: white;
-}
-
-.answer-content .section-identifier {
-    margin-left: 6px;
 }
 
 .card-header .answer-content .form-group {
